Configured project name, classes and ID

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = org.jetbrains.plugins.template
-pluginName = IntelliJ Platform Plugin Template
-pluginRepositoryUrl = https://github.com/JetBrains/intellij-platform-plugin-template
+pluginGroup = com.github.ValikProgrammer.IntelliJ-IDE-Plugin-JetBrains-Hackathon-2025
+pluginName = Code Evaluation - Quantum Spaghetti
+pluginRepositoryUrl = https://github.com/ValikProgrammer/IntelliJ-IDE-Plugin-JetBrains-Hackathon-2025
 # SemVer format -> https://semver.org
-pluginVersion = 2.3.1
+pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 251
