--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,19 +1,16 @@
-<!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.ValikProgrammer.IntelliJ-IDE-Plugin-JetBrains-Hackathon-2025</id>
     <name>Code Evaluation - Quantum Spaghetti</name>
     <vendor>Quantum Spaghetti</vendor>
 
     <depends>com.intellij.modules.platform</depends>
-    <depends>com.intellij.java</depends>
     <depends>org.jetbrains.kotlin</depends>
 
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow factoryClass="com.github.valikprogrammer.intellijidepluginjetbrainshackathon2025.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-        <postStartupActivity implementation="com.github.valikprogrammer.intellijidepluginjetbrainshackathon2025.startup.MyProjectActivity" />
-        <service serviceImplementation="com.github.valikprogrammer.intellijpluginjetbrainshackathon2025.services.OpenAIService"/>
+        <postStartupActivity implementation="com.github.valikprogrammer.intellijidepluginjetbrainshackathon2025.startup.MyProjectActivity"/>
     </extensions>
 
     <actions>
@@ -25,11 +22,11 @@
 
         <action
                 id="OpenAITest.TestAction"
-                class="com.github.valikprogrammer.intellijpluginjetbrainshackathon2025.TestAction"
+                class="com.github.valikprogrammer.intellijidepluginjetbrainshackathon2025.CollectCodeAction"
                 text="Run OpenAI API Test"
                 description="Sends a simple test request to the OpenAI API.">
             <add-to-group group-id="ToolsMenu" anchor="first"/>
         </action>
-    </actions>
 
+    </actions>
 </idea-plugin>
