--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pluginGroup = com.github.ValikProgrammer.IntelliJ-IDE-Plugin-JetBrains-Hackathon
 pluginName = Code Evaluation - Quantum Spaghetti
 pluginRepositoryUrl = https://github.com/ValikProgrammer/IntelliJ-IDE-Plugin-JetBrains-Hackathon-2025
 # SemVer format -> https://semver.org
-pluginVersion = 1.0.0
+pluginVersion = 1.7.3
 
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
@@ -17,8 +17,8 @@ platformVersion = 2024.3.6
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
+platformBundledPlugins = org.jetbrains.kotlin
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
 # Example: platformBundledModules = intellij.spellchecker
 platformBundledModules =
 
